syntax = "proto3";

package inventory_messages;

import "status.proto";
import "google/protobuf/timestamp.proto";

message InventoryCreateRequest {
    string sku = 1;
    int32 quantity = 2;
    int32 reserved_quantity = 3;
    int32 min_stock_level = 4;
    string location = 5;
}

message InventoryCreateResponse {
  optional InventoryItem item = 1;
  Status status = 2;
}

message InventoryGetRequest {
    string sku = 1;
}

message InventoryGetResponse {
  optional InventoryItem item = 1;
  Status status = 2;
}

message InventoryUpdateStockRequest {
    string sku = 1;
    int32 quantity_change = 2;
    string reason = 3;
}

message InventoryUpdateStockResponse {
  optional InventoryItem item = 1;
  Status status = 2;
}

message InventoryDeleteRequest {
    string sku = 1;
}

message InventoryDeleteResponse {
  Status status = 1;
}

message InventoryItem {
    optional string id = 1;
    string sku = 2;
    int32 quantity = 3;
    int32 reserved_quantity = 4;
    int32 available_quantity = 5;
    int32 min_stock_level = 6;
    string location = 7;
    google.protobuf.Timestamp last_updated = 8;
    google.protobuf.Timestamp created_at = 9;
}
